small fix to right align comment content if in hebrew

--- a/helpers-assets/css/translation-discussion.css
+++ b/helpers-assets/css/translation-discussion.css
@@ -47,3 +47,6 @@ article.comment time {
 	padding-left: 10px;
 	font-size: 0.9em;
 }
+.comment-content {
+	text-align: start;
+}
